added contact link in footer

--- a/ckanext/publicamundi/themes/geodata/templates/footer.html
+++ b/ckanext/publicamundi/themes/geodata/templates/footer.html
@@ -38,6 +38,7 @@
 
         <div class="quarter footer-links">
             <ul class="unstyled">
+                <li><a href="mailto:info@geodata.gov.gr">{% trans %}<span class="contact-footer">Contact</span>{% endtrans %} </a></li>
                 <li><a href="http://www.imis.athena-innovation.gr"> {{ _('IMIS') }} </a></li>
                 <li><a href="http://inspire.ec.europa.eu/"> {{ _('INSPIRE') }} </a></li>
                 <li><a href="http://open-data.europa.eu/en/data/"> {{ _('EU Open Data Portal') }} </a></li>
