Fix style editor for vector resources (vectorstorer)

--- a/ckanext/publicamundi/storers/vector/templates/style/base.html
+++ b/ckanext/publicamundi/storers/vector/templates/style/base.html
@@ -1,4 +1,4 @@
-<div{% if not embedded %} class="modal"{% endif %}>
+<div id="vector-style-editor" {% if not embedded %} class="modal editor"{% endif %}>
   <div class="modal-header">
     <h3>
       {{ _('Edit Style') }}
