--- a/ckanext/publicamundi/storers/vector/templates/style/main.html
+++ b/ckanext/publicamundi/storers/vector/templates/style/main.html
@@ -17,7 +17,7 @@
 {% block style_nav_tabs %}
  <ul class="nav nav-tabs">
    <li id="edit-current-style-tab">
-     <a href="javascript:;" id="edit-current-style"> <i class="icon-list"></i>{{_('Edit Current Style')}}</a>
+     <a href="javascript:;" id="edit-current-style"> <i class="icon-list"></i>{{_('Style')}}</a> 
    </li>
   <!-- <li id="upload-sld-file-tab">
      <a href="javascript:;" id="upload-sld-file"> <i class="icon-list"></i>{{_('Upload SLD')}}</a>-->
